--- a/BD/sw/app/static/index.html
+++ b/BD/sw/app/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset='UTF-8'>
-	<title>Lab9</title>
+	<title>Semestr</title>
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<script type='module'>
 		import './page_main.js';
